--- a/index.html
+++ b/index.html
@@ -208,14 +208,14 @@
     <div class="ten">
       <a href="countries/malaysia.html">
       <div class="country-content">
-        <div class="menu-section">
-          <h2 class="menu-section-title">Malaysia</h2>
+        <div id="malaysia" class="menu-section">
+          <h2  class="menu-section-title">Malaysia</h2>
         </div>
       </div>
       </a>
       <a href="countries/taiwan.html">
       <div class="country-content">
-        <div class="menu-section">
+        <div id="taiwan" class="menu-section">
           <h2 class="menu-section-title">Taiwan</h2>
         </div>
       </div>
@@ -224,14 +224,14 @@
     <div class="ten">
       <a href="countries/indonesia.html">
       <div class="country-content">
-        <div class="menu-section">
-          <h2 class="menu-section-title">Indonesia</h2>
+        <div id="indonesia" class="menu-section">
+          <h2  class="menu-section-title">Indonesia</h2>
         </div>
       </div>
       </a>
       <a href="countries/china.html">
       <div class="country-content">
-        <div class="menu-section">
+        <div id="china" class="menu-section">
           <h2 class="menu-section-title">China</h2>
         </div>
       </div>
@@ -240,7 +240,7 @@
     <div class="ten">
       <a href="countries/japan.html">
       <div class="country-content">
-        <div class="menu-section">
+        <div id="japan" class="menu-section">
           <h2 class="menu-section-title">Japan</h2>
           <div class="menu-item">
           </div>
@@ -249,7 +249,7 @@
       </a>
       <a href="countries/korea.html">
       <div class="country-content">
-        <div class="menu-section">
+        <div id="korea" class="menu-section">
           <h2 class="menu-section-title">South Korea</h2>
         </div>
       </div>
@@ -258,7 +258,7 @@
     <div class="ten">
       <a href="countries/cambodia.html">
       <div class="country-content">
-        <div class="menu-section">
+        <div id="cambodia" class="menu-section">
           <h2 class="menu-section-title">Cambodia</h2>
           <div class="menu-item">
             <div class="menu-item-description"></div>
@@ -268,7 +268,7 @@
       </a>
       <a href="countries/vietnam.html">
       <div class="country-content">
-        <div class="menu-section">
+        <div id="vietnam" class="menu-section">
           <h2 class="menu-section-title">Vietnam</h2>
         </div>
       </div>
@@ -277,14 +277,14 @@
     <div class="ten">
       <a href="countries/philipinnes.html">
       <div class="country-content">
-        <div class="menu-section">
+        <div id="philippines" class="menu-section">
           <h2 class="menu-section-title">Philippines</h2>
         </div>
       </div>
       </a>
       <a href="countries/thailand.html">
       <div class="country-content">
-        <div class="menu-section">
+        <div id="thailand" class="menu-section">
           <h2 class="menu-section-title">Thailand</h2>
         </div>
       </div>
