--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         <div class="gallery-item"> <img src="img/gallery/01.jpg" class="img-responsive" alt=""></div>
       </div>
       <div class="col-xs-6 col-md-3">
-        <div class="gallery-item"> <img src="img/gallery/02.jpg" class="img-responsive" alt=""></div>
+        <div class="gallery-item"> <img src="countries/images/viet2.jpg" class="img-responsive" alt=""></div>
       </div>
       <div class="col-xs-6 col-md-3">
         <div class="gallery-item"> <img src="img/gallery/03.jpg" class="img-responsive" alt=""></div>
@@ -350,9 +350,10 @@
 <div id="contact" class="text-center">
   <div class="social">
     <ul>
+      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+
     </ul>
   </div>
   <div class="container text-center">
